--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -10,6 +10,7 @@ jobs:
   example_1:
   # Installs tensorflow
   # Installs using conda_install
+  # Uses Python 3.6
 
     runs-on: ubuntu-latest
     env:
@@ -32,6 +33,7 @@ jobs:
   example_2:
   # Installs tensorflow
   # Installs using py_install
+  # Uses Python 3.6
 
     runs-on: ubuntu-latest
     env:
@@ -54,6 +56,29 @@ jobs:
   example_3:
   # Installs scipy
   # Installs using conda_install
+  # Uses Python 3.6
+
+    runs-on: ubuntu-latest
+    env:
+      GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
+    steps:
+      - uses: actions/checkout@v2
+
+      - uses: r-lib/actions/setup-r@v1
+
+      - uses: r-lib/actions/setup-pandoc@v1
+
+      - name: Install dependencies
+        run: |
+          install.packages(c("reticulate", "testthat"))
+        shell: Rscript {0}
+
+      - name: Example 3
+        run: Rscript example_3.R
+
+  # Installs scipy
+  # Installs using conda_install
+  # Uses default Python version
 
     runs-on: ubuntu-latest
     env:
