--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -76,6 +76,7 @@ jobs:
       - name: Example 3
         run: Rscript example_3.R
 
+  example_4:
   # Installs scipy
   # Installs using conda_install
   # Uses default Python version
