--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -20,7 +20,7 @@ jobs:
 
       - uses: r-lib/actions/setup-r@v1
 
-      - uses: r-lib/actions/setup-pandoc@v1
+#      - uses: r-lib/actions/setup-pandoc@v1
 
       - name: Install dependencies
         run: |
@@ -43,7 +43,7 @@ jobs:
 
       - uses: r-lib/actions/setup-r@v1
 
-      - uses: r-lib/actions/setup-pandoc@v1
+#      - uses: r-lib/actions/setup-pandoc@v1
 
       - name: Install dependencies
         run: |
@@ -66,7 +66,7 @@ jobs:
 
       - uses: r-lib/actions/setup-r@v1
 
-      - uses: r-lib/actions/setup-pandoc@v1
+#      - uses: r-lib/actions/setup-pandoc@v1
 
       - name: Install dependencies
         run: |
@@ -96,6 +96,29 @@ jobs:
           install.packages(c("reticulate", "testthat"))
         shell: Rscript {0}
 
-      - name: Example 3
-        run: Rscript example_3.R
+      - name: Example 4
+        run: Rscript example_4.R
+
+  example_5:
+  # Installs tensorflow
+  # Installs using conda_install
+  # Uses current version of Python
+
+    runs-on: ubuntu-latest
+    env:
+      GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
+    steps:
+      - uses: actions/checkout@v2
+
+      - uses: r-lib/actions/setup-r@v1
+
+      - uses: r-lib/actions/setup-pandoc@v1
+
+      - name: Install dependencies
+        run: |
+          install.packages(c("reticulate", "testthat"))
+        shell: Rscript {0}
+
+      - name: Example 5
+        run: Rscript example_5.R
 
